# sf_git2

./: pyproject.toml
app/: main.py
tests/: conftest.py  test_main.py
