[tool.poetry]
name = "sf_edu_gh_actions"
version = "0.1.0"
description = "practice for github actions"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.8"
fastapi = "^0.100.0"
gunicorn = "^21.2.0"
uvicorn = "^0.23.1"

[tool.poetry.dev-dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "app"

[tool.black]
# https://github.com/psf/black
line-length = 88
target_version = ['py38']
exclude = '''
(
  /(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | htmlcov
    | venv
    | .venv
  )/
)
'''